@@ -1,19 +1,19 @@
-CondorName,SpeedMax[km/h],DAeCIndex,WaterBalastEmptyTime[s],MassDryGross[kg],MaxWaterBallast[liters],Speed1[km/h],Sink1[m/s],Speed2,Sink2,Speed3,Sink3
-ASG29,285,120,200,368,200,76,-0.483,136,-0.87,170,-1.5
-ASK13,200,78,0,380,0,64,-0.726,100,-1.17,130,-2.22
-ASW22,280,128,118,500,235,85,-0.395,121,-0.68,180,-1.93
-ASW27,285,114,190,317,190,75,-0.54,181,-1.82,222,-3.14
-ASW28,285,108,180,268,180,77,-0.572,129,-1.021,185,-2.9198
-ASW28-18,270,114,190,295,190,78,-0.494,91,-0.522,128,-0.97
-Discus2,250,108,200,328,200,78,-0.574,105,-0.67,165,-1.91
-Discus2c,280,114,200,318,200,77,-0.503,134,-1.08,175,-2.35
-Fox,282,80,0,420,0,92,-0.99,121,-1.15,166,-2.12
-Jantar2b,250,116,165,408,165,75,-0.461,129,-0.93,170,-1.87
-LS10,280,120,190,348,190,81,-0.501,111,-0.64,185,-1.89
-LS6,270,112,160,328,160,75,-0.592,120,-0.83,200,-2.29
-LS8,280,108,190,339,190,85,-0.586,127,-0.96,148,-1.36
-LS8s,280,114,190,340,190,84,-0.514,150,-1.38,159,-1.61
-Nimbus4,275,128,300,500,300,86,-0.4,137,-0.95,201,-2.64
-PW-5,213,86,0,270,0,86,-0.751,105,-1.04,120,-1.4
-Ventus2,270,114,200,317,200,74,-0.528,142,-1.02,181,-1.85
-Ventus2cx,285,120,200,365,200,76,-0.475,93,-0.509,185,-1.88
+CondorName,SpeedMax[km/h],DAeCIndex,WaterBalastEmptyTime[s],WingArea [m2],MassDryGross[kg],MaxWaterBallast[liters],Speed1[km/h],Sink1[m/s],Speed2,Sink2,Speed3,Sink3
+ASG29,285,120,200,10.5,368,200,76,-0.483,136,-0.87,170,-1.5
+ASK13,200,78,0,17.5,380,0,64,-0.726,100,-1.17,130,-2.22
+ASW22,280,128,118,16.69,500,235,85,-0.395,121,-0.68,180,-1.93
+ASW27,285,114,190,9,317,190,75,-0.54,181,-1.82,222,-3.14
+ASW28,285,108,180,10.5,268,180,77,-0.572,129,-1.021,185,-2.9198
+ASW28-18,270,114,190,11.88,295,190,78,-0.494,91,-0.522,128,-0.97
+Discus2,250,108,200,10.16,328,200,78,-0.574,105,-0.67,165,-1.91
+Discus2c,280,114,200,11.36,318,200,77,-0.503,134,-1.08,175,-2.35
+Fox,282,80,0,12.34,420,0,92,-0.99,121,-1.15,166,-2.12
+Jantar2b,250,116,165,14.25,408,165,75,-0.461,129,-0.93,170,-1.87
+LS10,280,120,190,11.45,348,190,81,-0.501,111,-0.64,185,-1.89
+LS6,270,112,160,10.5,328,160,75,-0.592,120,-0.83,200,-2.29
+LS8,280,108,190,10.5,339,190,85,-0.586,127,-0.96,148,-1.36
+LS8s,280,114,190,11.4,340,190,84,-0.514,150,-1.38,159,-1.61
+Nimbus4,275,128,300,17.86,500,300,86,-0.4,137,-0.95,201,-2.64
+PW-5,213,86,0,10.16,270,0,86,-0.751,105,-1.04,120,-1.4
+Ventus2,270,114,200,9.67,317,200,74,-0.528,142,-1.02,181,-1.85
+Ventus2cx,285,120,200,11.03,365,200,76,-0.475,93,-0.509,185,-1.88
